--- a/app/src/main/res/layout/item_pokedex.xml
+++ b/app/src/main/res/layout/item_pokedex.xml
@@ -3,39 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="152dp">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="232dp"
-        tools:layout_editor_absoluteY="44dp" />
-
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="50dp"
-        android:layout_height="17dp"
-        app:srcCompat="@drawable/habilitie"
-        tools:layout_editor_absoluteX="324dp"
-        tools:layout_editor_absoluteY="69dp" />
-
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="50dp"
-        android:layout_height="17dp"
-        app:srcCompat="@drawable/habilitie"
-        tools:layout_editor_absoluteX="324dp"
-        tools:layout_editor_absoluteY="89dp" />
 
     <ImageView
         android:id="@+id/ivCardOne"
         android:layout_width="196dp"
         android:layout_height="100dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="27dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/bug1" />
@@ -44,7 +19,6 @@
         android:id="@+id/ivCardTwo"
         android:layout_width="196dp"
         android:layout_height="100dp"
-        android:layout_marginTop="27dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ivCardOne"
@@ -54,9 +28,10 @@
     <ImageView
         android:id="@+id/ivCardThree"
         android:layout_width="196dp"
-        android:layout_height="100dp"
+        android:layout_height="108dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="99dp"
+        android:layout_marginTop="65dp"
+        android:layout_marginEnd="-10000dp"
         app:layout_constraintEnd_toEndOf="@+id/ivCardOne"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -64,9 +39,9 @@
 
     <ImageView
         android:id="@+id/ivCardFourd"
-        android:layout_width="196dp"
-        android:layout_height="97dp"
-        android:layout_marginTop="99dp"
+        android:layout_width="223dp"
+        android:layout_height="94dp"
+        android:layout_marginTop="71dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ivCardOne"
@@ -83,7 +58,7 @@
         android:foregroundTint="#FFFFFF"
         android:text="Bulbasaur"
         android:textColor="@color/white"
-        android:textSize="10sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/ivCardOne"
         app:layout_constraintTop_toTopOf="@+id/ivCardOne" />
@@ -96,7 +71,7 @@
         android:foregroundTint="#FFFFFF"
         android:text="Poison"
         android:textColor="@color/white"
-        android:textSize="8sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/ivTypeOne"
         app:layout_constraintEnd_toEndOf="@+id/ivTypeOne"
         app:layout_constraintStart_toStartOf="@+id/ivTypeOne"
@@ -110,13 +85,13 @@
         android:foregroundTint="#FFFFFF"
         android:text="Poison"
         android:textColor="@color/white"
-        android:textSize="8sp"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/ivTypeTwo"
         app:layout_constraintEnd_toEndOf="@+id/ivTypeTwo"
         app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="@+id/ivTypeTwo"
         app:layout_constraintTop_toBottomOf="@+id/ivTypeOne"
-        app:layout_constraintVertical_bias="0.58000004" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/tvNumberPokemon"
@@ -124,26 +99,26 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="#002"
-        android:textSize="10sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@+id/ivCardOne"
-        app:layout_constraintHorizontal_bias="0.58"
+        app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toEndOf="@+id/tvNamePokemon"
         app:layout_constraintTop_toTopOf="@+id/ivCardOne" />
 
     <ImageView
         android:id="@+id/ivTypeOne"
-        android:layout_width="50dp"
+        android:layout_width="58dp"
         android:layout_height="17dp"
         android:layout_marginStart="36dp"
         app:layout_constraintBottom_toBottomOf="@+id/ivCardOne"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvNamePokemon"
-        app:layout_constraintVertical_bias="0.163"
+        app:layout_constraintVertical_bias="0.060000002"
         app:srcCompat="@drawable/habilitie" />
 
     <ImageView
         android:id="@+id/ivTypeTwo"
-        android:layout_width="50dp"
+        android:layout_width="58dp"
         android:layout_height="17dp"
         android:layout_marginStart="36dp"
         app:layout_constraintBottom_toBottomOf="@+id/ivCardOne"
@@ -158,7 +133,7 @@
         android:layout_height="66dp"
         app:layout_constraintBottom_toBottomOf="@+id/ivCardOne"
         app:layout_constraintEnd_toEndOf="@+id/ivCardOne"
-        app:layout_constraintHorizontal_bias="0.638"
+        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toEndOf="@+id/tvNamePokemon"
         app:layout_constraintTop_toTopOf="@+id/ivCardOne"
         app:layout_constraintVertical_bias="0.603"
@@ -170,7 +145,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="#002"
-        android:textSize="10sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@+id/tvNamePokemon2"
         app:layout_constraintHorizontal_bias="0.422"
         app:layout_constraintStart_toEndOf="@+id/ivCardOne"
@@ -184,7 +159,7 @@
         android:layout_marginEnd="32dp"
         android:text="Bulbasaur"
         android:textColor="@color/white"
-        android:textSize="10sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/ivCardTwo"
         app:layout_constraintTop_toTopOf="@+id/ivCardTwo" />
@@ -195,7 +170,7 @@
         android:layout_height="66dp"
         app:layout_constraintBottom_toBottomOf="@+id/ivCardTwo"
         app:layout_constraintEnd_toStartOf="@+id/tvNamePokemon2"
-        app:layout_constraintHorizontal_bias="0.38"
+        app:layout_constraintHorizontal_bias="0.54"
         app:layout_constraintStart_toStartOf="@+id/ivCardTwo"
         app:layout_constraintTop_toTopOf="@+id/ivCardTwo"
         app:layout_constraintVertical_bias="0.588"
@@ -241,10 +216,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:text="Bulbasaur"
         android:textColor="@color/white"
-        android:textSize="10sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/ivCardThree"
         app:layout_constraintTop_toTopOf="@+id/ivCardThree" />
@@ -255,7 +230,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="#002"
-        android:textSize="10sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@+id/ivCardThree"
         app:layout_constraintHorizontal_bias="0.575"
         app:layout_constraintStart_toEndOf="@+id/tvNamePokemon3"
@@ -269,7 +244,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/ivCardThree"
         app:layout_constraintStart_toStartOf="@+id/ivCardThree"
         app:layout_constraintTop_toBottomOf="@+id/tvNamePokemon3"
-        app:layout_constraintVertical_bias="0.207"
+        app:layout_constraintVertical_bias="0.060000002"
         app:srcCompat="@drawable/habilitie" />
 
     <ImageView
@@ -325,7 +300,7 @@
         android:layout_marginEnd="32dp"
         android:text="Bulbasaur"
         android:textColor="@color/white"
-        android:textSize="10sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/ivCardFourd"
         app:layout_constraintTop_toTopOf="@+id/ivCardFourd" />
@@ -336,7 +311,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="#002"
-        android:textSize="10sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@+id/tvNamePokemon4"
         app:layout_constraintHorizontal_bias="0.41"
         app:layout_constraintStart_toStartOf="@+id/ivCardFourd"
